fix(theme):z-index-issues-fixed

--- a/src/components/Theme/Theme.module.css
+++ b/src/components/Theme/Theme.module.css
@@ -56,3 +56,12 @@
 
     z-index: -1;
 }
+
+.childrenContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 2;
+}
