--- a/src/pages/app/Home/Home.module.css
+++ b/src/pages/app/Home/Home.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .create {
@@ -18,6 +19,7 @@
     column-gap: 2rem;
     row-gap: 2rem;
 }
+
 
 .date {
     font-size: 1.25rem;
