--- a/src/pages/auth/Authstyles.module.css
+++ b/src/pages/auth/Authstyles.module.css
@@ -4,8 +4,6 @@
     align-items: center;
     justify-content: center;
 
-    background: #131517;
-
     font-family: "Inter", sans-serif;
 
     display: flex;
